--- a/src/pages/Newproject/newproject.css
+++ b/src/pages/Newproject/newproject.css
@@ -2,14 +2,9 @@
   margin: 0;
   box-sizing: border-box;
 }
-/* .newproject {
-  height: 100vh;
-  width: 100vw;
-} */
-
 .todos {
   width: 500px;
-  height: 500px;
+  min-height: 550px;
   color: blue;
   margin: 0px auto;
   margin-top: 50px;
@@ -22,10 +17,10 @@
   background-color: white;
   box-shadow: 15px 10px 10px 0px rgb(54, 30, 30);
 }
-
 .heading {
   height: 40px;
-  padding-left: 200px;
+  padding-left: 170px;
+  text-decoration: underline;
 }
 .addtodos {
   width: 400px;
@@ -39,11 +34,9 @@
   justify-content: space-between;
   padding-left: 20px;
   padding-top: 20px;
-
   width: 450px;
   gap: 10px;
 }
-
 .new2 {
   width: 230px;
   height: 50px;
@@ -57,14 +50,12 @@
   flex-direction: row;
   justify-content: space-around;
   gap: 5px;
-
   width: 150px;
 }
-
 .maping {
   width: 390px;
-  height: 400px;
-
+  min-height: 200px;
+  height: fit-content;
   padding: 20px 30px;
   margin-left: 70px;
   margin-top: 20px;
@@ -74,8 +65,15 @@
 }
 .donebtn {
   width: 80px;
-  height: 100px;
+  height: 30px;
   margin-left: 380px;
   background-color: rgb(166, 139, 139);
   color: black;
+}
+.finish {
+  margin-top: 40px;
+  margin-left: 50px;
+}
+.mainmapping {
+  width: 500px;
 }
